add css reset file and moar styling, plz

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>CSS Grid Test</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="container">
@@ -18,7 +18,7 @@
       <p>This is body copy area 2.</p>
     </div>
     <div class="footer">
-      <p>Hi, this is a footer.</p>
+      <h2>Hi, this is a footer.</h2>
     </div>
   </div>
 </body>
