added the grid-column-gap demo

--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
       <h2>Hi, this is a footer.</h2>
     </div>
   </div>
+
+  <div class="grid-column-gap-demo-container">
+    <div class="grid-column-gap-demo-header">
+      <p>Hey, check out Oprah giving out grid-column-gaps below.</p>
+    </div>
+    <div class="grid-column-gap-demo-1">
+      <p>And you get a gap!</p>
+    </div>
+    <div class="grid-column-gap-demo-2">
+      <p>And you get a gap!</p>
+    </div>
+    <div class="grid-column-gap-demo-3">
+      <p>And you get a gap!</p>
+    </div>
+  </div>
 </body>
 </html>
